--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <title>
      FOSS Community United
   </title>
+  <link rel="icon" href="images/OpenSource (1) - Edited.png" type="image/icon type">
 
     <meta name="description" content="FOSS Community United" />
 
@@ -51,10 +52,6 @@
 
 
 <header class="main-header " style="background-image: url(images/user.png)">
-
-
-    
-
     <nav class="main-nav overlay clearfix">
         
             <a class="blog-logo" href="https://saynotocp.org/"><i class="fa-brands fa-osi fa-3x"></i>
