--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     
     <link rel="stylesheet" type="text/css" href="css/screen.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" />
+    <link rel="stylesheet" href="styles/styles.css">
 
 
     
@@ -66,6 +67,26 @@
           </h1>
         </div>
 </div>
+
+<div class="controlls">
+    <div class="control  control-1 active-btn" data-id="home" >
+        <i class="fas fa-home"></i>
+    </div>
+    <div class="control control-2 " data-id="about">
+        <i class="fas fa-user"></i>
+    </div>
+    <div class="control control-3" data-id="portfolio">
+        <i class="fas fa-briefcase"></i>
+    </div>
+    <div class="control control-4" data-id="blogs">
+        <i class="far fa-newspaper"></i>
+    </div>
+    <div class="control control-5" data-id="contact">
+        <i class="fas fa-envelope-open"></i>
+    </div>
+</div>
+
+
     <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
 </header>
 
