Linked app.js to html

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>  
+    <script type="text/javascript" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/86dd36b333.js" crossorigin="anonymous"></script>
 </body>
 </html>
