--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="#home" class="navbar__links" id="home-page">Home</a>
         </li>
         <li class="navbar__item">
-          <a href="#about" class="navbar__links" id="about-page">About</a>
+          <a href="page/about-us/index.html" class="navbar__links" id="about-page">About</a>
         </li>
         <li class="navbar__item">
           <a href="#events" class="navbar__links" id="events-page">Events</a>
