--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">
-              <a class="btn-bootstrap-2 title-scroll random fcol" href="#content">FOSS Community United</a>
+              <a class="btn-bootstrap-2 title-scroll random fcol" href="#content">Free and Open Source Software Community United</a>
               <a class="title-scroll random fcol" href="#content">Join Now</a>
             </h1>
           </div>
