--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
     </div>
   
     <script type="text/javascript" src="js/jquery.js"></script>
+      <script type="text/javascript" src="js/jquery.js"></script>
+
     <script type="text/javascript" src="jquery.fitvids.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/particles.min.js"></script>
