Added web3 version

--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
     <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>  
     <script src="https://kit.fontawesome.com/86dd36b333.js" crossorigin="anonymous"></script>
-  
+    <a class="web3" href="https://codesandbox.io/s/ui3sd8" target="_blank" rel="noopener noreferrer">Open Sandbox</a>
 </body>
 </html>
