--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Join Now</span></a>
 </header>
-
+<img class= "web3"alt="View%20Web3%20Version" src="https://img.shields.io/badge/-View%20Web3%20Version-orange?style=for-the-badge&logo=Ethereum">
 <main id="content" class="content" role="main">
     <div class="extra-pagination inner">
         <nav class="pagination" role="navigation">
@@ -106,7 +106,6 @@
 	<span class="page-number">Page 1 of 1</span>
 	
 </nav>
-
     </div>
 <iframe width="100%" height="19200px" src="https://forms.office.com/r/udhip9GGCU?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>    
         
@@ -155,6 +154,5 @@
     <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>  
     <script src="https://kit.fontawesome.com/86dd36b333.js" crossorigin="anonymous"></script>
-    <a class="web3" href="https://codesandbox.io/s/ui3sd8" target="_blank" rel="noopener noreferrer">Open Sandbox</a>
 </body>
 </html>
