fixed some minor bugs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </h1>
           </div>
         </div>
-        <!-- <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Join Now</span></a> -->
+        <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden"></span></a>
 </header>
 <main id="content" class="content" role="main">
     <div class="extra-pagination inner">
