Added LinkedIn to the footer section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
       <span class="tooltip">Github</span>
       <a href="https://github.com/FOSS-Community"><i class="fab fa-github"></i></a>
     </li>
+    <li class="icon linkedin-square">
+      <span class="tooltip">Linkedin</span>
+      <a href="https://www.linkedin.com/company/fosscu/"><i class="fa fa-linkedin-square"></i></a>
+    </li>
   </ul>
 </footer>
 
