--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="images/favicon.ico">
 	  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-    
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/screen.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" />
         <link href="index.xml" rel="alternate" type="application/rss+xml" title="FOSS Community United" />
@@ -144,25 +146,51 @@
  -->
     
 </main>
-<footer class="smh">
-  <ul class="wrapper">
-    <li class="icon twitter">
-      <span class="tooltip">Twitter</span>
-      <a href="https://twitter.com/fosscuk"><i class="fab fa-twitter"></i></a>
-    </li>
-    <li class="icon instagram">
-      <span class="tooltip">Instagram</span>
-      <a href="https://www.instagram.com/fosscu/"><i class="fab fa-instagram"></i></a>
-    </li>
-    <li class="icon github">
-      <span class="tooltip">Github</span>
-      <a href="https://github.com/FOSS-Community"><i class="fab fa-github"></i></a>
-    </li>
-    <li class="icon linkedin-square">
-      <span class="tooltip">Linkedin</span>
-      <a href="https://www.linkedin.com/company/fosscu/"><i class="fa fa-linkedin-square"></i></a>
-    </li>
-  </ul>
+<footer class="footer-distributed">
+
+  <div class="footer-left">
+      <img src="images/OpenSource (1) - Edited.png">
+    <h3>About<span>FOSSCU</span></h3>
+
+    <p class="footer-links">
+      <a href="https://foss-website-new.vercel.app/">Home</a>
+      |
+      <a href="#">Blog</a>
+      |
+      <a href="about.html">About</a>
+      |
+      <a href="#">Contact</a>
+    </p>
+
+    <p class="footer-slogan">May the open source be with you 💚</p>
+  </div>
+
+  <div class="footer-center">
+    <div class="mapmail">
+      <i class="fa fa-map-marker"></i>
+        <p><span>KIET Group of Institutions</span>
+          <span> NH 58, Delhi - Meerut Expressway, Phase - I,</span>
+          Muradnagar, Uttar Pradesh 201206</p>
+    </div>
+   <br>
+   <br>
+    <div>
+      <i class="fa fa-envelope"></i>
+      <p><a href="mailto:fosscu@gmail.com">fosscu@gmail.com</a></p>
+    </div>
+  </div>
+  <div class="footer-right">
+    <p class="footer-company-about">
+      <span class="abt">About FOSS Community</span>
+      We are a community that promotes Open Source and Development Culture among the students. We organize bootcamps and provide mentorship to the members.
+We always believe in Collaboration over Competition.</p>
+    <div class="footer-icons">
+      <a class="twitter" href="https://twitter.com/fosscuk?s=11&t=ZuuM8d49669G8MCR0oCk6Q"><i class="fa fa-twitter"></i></a>
+      <a class="insta" href="https://www.instagram.com/fosscu/"><i class="fa fa-instagram"></i></a>
+      <a class="linkedin" href="https://www.linkedin.com/company/fosscu/"><i class="fa fa-linkedin"></i></a>
+      <a class="github" href="https://github.com/FOSS-Community"><i class="fa fa-github"></i></a>
+    </div>
+  </div>
 </footer>
 
 <footer class="site-footer clearfix">
