--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
      FOSS Community United
   </title>
   <link rel="icon" href="images/OpenSource (1) - Edited.png" type="image/icon type">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+
 
     <meta name="description" content="FOSS Community United" />
 
